Overflow sin resolver

--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,45 @@
 
 *{
-    margin:0px;
     box-sizing: border-box;
     font-family: "Roboto", sans-serif;
+}
+
+
+body, html {
+  width: 100%;
+  margin: 0;
+}
+
+.card{
+    box-shadow: 3px 12px 57px -18px rgba(0,0,0,0.75);
+    padding: 25px;   
+}
+
+.sticky {
+    position: fixed;
+    top:10px;
+    position:-webkit-sticky;
+}
+
+
+
+
+.one-fourth-left{
+    float: left;
+    width: 25%;
+    padding: 10px;
+}
+
+.one-fourth-right{
+    float: right;
+    width: 25%;
+    padding: 10px;
+}
+
+.half-left{
+    float: left;
+    width: 50%;
+    padding: 10px;
 }
 
 header {
@@ -15,13 +52,11 @@ header>p {
     float:left;
     padding: 40px 20px;
     width: 30%;
+    
 }
 
 
 nav {
-    float: left;
-    width: 25%;
-    padding: 30px;
     background-color: bisque;
 }
 
@@ -29,25 +64,20 @@ nav>ul{
     list-style-type: none;
 }
 
-
 aside {
-    float: left;
-    width: 25%;
-    padding: 30px;
     background-color:aqua;
 }
 
 section {
-    float: left;
-    width: 50%;
-    padding: 30px;
     background-color: darksalmon;
 }
 
 footer {
     padding: 30px;
     clear:both;
-    background-color: burlywood;
+    background-color:darkblue;
+    color: white;
+
     text-align: center;
 }
 
@@ -67,16 +97,13 @@ footer {
 @media (max-width: 900px) {
     nav{
         width: 100%;
-        height: auto;
     }
     
     section{
         width: 100%;
-        height: auto;
     }
 
     aside{
         width: 100%;
-        height: auto;
     }
 }
